--- a/book_information.ui
+++ b/book_information.ui
@@ -175,7 +175,7 @@
      <item row="1" column="0">
       <widget class="QLabel" name="label_2">
        <property name="text">
-        <string>帐号</string>
+        <string>书号</string>
        </property>
       </widget>
      </item>
